added name to dashboard bar

--- a/s.html
+++ b/s.html
@@ -83,7 +83,8 @@
                         C617.5,410.9,605.6,422.9,590.7,422.9z"/>
               </svg>
           </a>
-          <b>My Dashboard</b>
+          <b>Dashboard</b>
+	  <span class="right" style="margin-top: 3px;"> <b>{{user.name}}</b></span>
 
           <ul class="side-nav grey" id="mobile-demo">
             <li class="sidenav-header blue">
