removed margin-top from navbar name
Thanks to Rohin!

--- a/s.html
+++ b/s.html
@@ -92,7 +92,7 @@
               </svg>
           </a>
           <b>Dashboard</b>
-	  <span class="right" style="margin-top: 3px;"> <b>{{user.name}}</b></span>
+	  <span class="right"> <b>{{user.name}}</b></span>
 
           <ul class="side-nav grey" id="mobile-demo">
             <li class="sidenav-header blue">
