changed orange to add Level

--- a/s.html
+++ b/s.html
@@ -201,8 +201,8 @@
         <div class="col s12 m6 l4">
          <div class="card animate fadeRight">
             <div class="mycardcontent orange lighten-1 white-text">
-               <p class="card-stats-title">{{user.level.name}}</p>
-               <h4 class="card-stats-number white-text">{{user.pointstotal}}</h4>
+               <p class="card-stats-title">Level</p>
+               <h4 class="card-stats-number white-text">{{user.level.name}} ({{user.pointstotal}})</h4>
             </div>
             <div class="mycardcontent orange">
                <div height="250px">
