--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                 		<p>Level: Acolyte<br><b>Points: 22</b> | Daily: 12 | Quizzes: 7 | Badges: 3</p>
               			</li>
             			</ul>
-    				<p>How do I use gameof5 to organize, structure, present and gamify my courses? Get your answers here.</p>
-    				<p><a href="blog/index.html" target="_blank" class="waves-effect waves-light btn blue">Blog</a></p>
+    				<p>Use admin tools to structure your courses and analyze data. Student views engage and empower student learning.</p>
     			</div>
     		</div>
 
