added ng-show to control leaderboard

--- a/s.html
+++ b/s.html
@@ -162,7 +162,7 @@
               </ul>
             </li>
 
-	    <li class="light-green">
+	    <li class="light-green" ng-show="listArray.length > 0">
               <ul class="collapsible collapsible-accordion">
                   <li>
                     <a class="collapsible-header white-text waves-effect waves-light-green">Leaders</a>
