added input search
lessons searchable on keywords

--- a/s.html
+++ b/s.html
@@ -121,8 +121,12 @@
                     <a class="collapsible-header white-text waves-effect waves-blue">Lessons</a>
                     <div class="collapsible-body z-depth-3">
 
+		      <div class="container">
+  			Keyword Search:
+  			<input type="text" class="search" id="basic-url" ng-model="searchString">
+                      </div>
                         <div class="collection black-text">
-                            <div ng-repeat="item in readonly.lessons" style="border-style: solid;border-width: .35px; border-color: grey;">
+                            <div ng-repeat="item in readonly.lessons | searchFor:searchString" style="border-style: solid;border-width: .35px; border-color: grey;">
                             <a href="#modallesson" id='data{{$index}}' class="collection-item modal-action modal-trigger" ng-click="setData($index)" ng-show="item.show">
                                <table style="padding: 0px !important; margin: 0px !important;">
                                 <tr align="left">
