added comments & hlink to settings

--- a/w.html
+++ b/w.html
@@ -292,6 +292,33 @@
                         </div>
                     </td>
                 </tr>
+		      
+		<tr>
+                    <td>Show lesson comments</td>
+                    <td>
+                        <div class="switch">
+                            <label>
+                              off
+                              <input type="checkbox" ng-click="cdata.readonly.settings.lcomments = !cdata.readonly.settings.lcomments" ng-checked="cdata.readonly.settings.lcomments">
+                              <span class="lever"></span>
+                              on
+                            </label>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Show homework link for comments</td>
+                    <td>
+                        <div class="switch">
+                            <label>
+                              off
+                              <input type="checkbox" ng-click="cdata.readonly.settings.hlink = !cdata.readonly.settings.hlink" ng-checked="cdata.readonly.settings.hlink">
+                              <span class="lever"></span>
+                              on
+                            </label>
+                        </div>
+                    </td>
+                </tr> 
 		    
 		<tr>
                     <td>Number on leaderboard</td>
