added view all + prettify

--- a/w.html
+++ b/w.html
@@ -226,7 +226,7 @@
                 </div>
               </div>
           </div>
-          <p>* view and prettify your data using a <a href='https://jsoneditoronline.org/' target='_blank'>JSON editor</a></p>
+          <p>* <a href="#" ng-click="prettify()">View</a> and prettify all your data using a <a href='https://jsoneditoronline.org/' target='_blank'>JSON editor</a></p>
         </div>
 
           <div class="modal-footer">
