added quiz name

--- a/w.html
+++ b/w.html
@@ -366,6 +366,14 @@
                         </div>
                     </td>
                 </tr>
+		<tr>
+                    <td>Quiz name</td>
+                    <td>
+                        <div >
+				<input class="TextBox" type="text" maxlength="20" ng-model="cdata.readonly.settings.quizname"/>
+                        </div>
+                    </td>
+                </tr>
 		      
               </table>
           </div>
