--- a/s.html
+++ b/s.html
@@ -299,7 +299,7 @@
         <div class="col s12 m6 l4">
             <div class="card animate fadeLeft">
                 <div class="mycardcontent cyan white-text">
-                    <p class="card-stats-title">Quizzes</p>
+                    <p class="card-stats-title">{{readonly.settings.quizname}}</p>
                     <h4 class="card-stats-number white-text">{{user.quiztotal}}</h4>
                 </div>
             <div class="mycardcontent cyan darken-1">
