updated for new youtube videos

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     				<p><a href="w.html" target="_blank" class="waves-effect waves-light btn blue">Get started</a></p>
     			</div>
     			<div class="card-panel white hoverable"> 
-                    <a href="images/user.gif" target="_blank"><img src="images/dash.png" width="100%"></a>
-    				<p>User dashboard engages and empowers by presenting achievements, feedback and materials. <a href="images/user.gif" target="_blank"> More ...</a></p>
+                    <a href="https://youtu.be/N28-eKgaH2I" target="_blank"><img src="images/dash.png" width="100%"></a>
+    				<p>User dashboard engages and empowers by presenting achievements, feedback and materials. <a href="https://youtu.be/N28-eKgaH2I" target="_blank"> Video ...</a></p>
                     
     			</div>
     		</div>
@@ -62,9 +62,9 @@
     			</div>
                 
     			<div class="card-panel white hoverable">
-                    <a href="images/g5admin.gif" target="_blank"><img src="images/admin.png" width="100%"></a>
+                    <a href="https://youtu.be/TX71tiInguA" target="_blank"><img src="images/admin.png" width="100%"></a>
                     <div>
-                      <p>Admin tools to input, analyse and manage your lessons, badges, levels, quests, points, and comments. <a href="images/g5admin.gif" target="_blank"> More...</a></p>
+                      <p>Admin tools to input, analyse and manage your lessons, badges, levels, quests, points, and comments. <a href="https://youtu.be/TX71tiInguA" target="_blank"> Video ...</a></p>
                     </div>
                 </div>
     		</div>
