added switch for newui
newui to settings modal

--- a/w.html
+++ b/w.html
@@ -357,6 +357,20 @@
                         </div>
                     </td>
                 </tr> 
+		      
+	        <tr>
+                    <td>Use new user interface</td>
+                    <td>
+                        <div class="switch">
+                            <label>
+                              off
+                              <input type="checkbox" ng-click="cdata.readonly.settings.newui = !cdata.readonly.settings.newui" ng-checked="cdata.readonly.settings.newui">
+                              <span class="lever"></span>
+                              on
+                            </label>
+                        </div>
+                    </td>
+                </tr>
 		    
 		<tr>
                     <td>Number on leaderboard</td>
