added reports tab to settings

--- a/w.html
+++ b/w.html
@@ -371,6 +371,20 @@
                         </div>
                     </td>
                 </tr>
+		      
+                <tr>
+                    <td>Show reports tab</td>
+                    <td>
+                        <div class="switch">
+                            <label>
+                              off
+                              <input type="checkbox" ng-click="cdata.readonly.settings.report = !cdata.readonly.settings.report" ng-checked="cdata.readonly.settings.report">
+                              <span class="lever"></span>
+                              on
+                            </label>
+                        </div>
+                    </td>
+                </tr>
 		    
 		<tr>
                     <td>Number on leaderboard</td>
