updated for new report function
calls genReport now

--- a/d.html
+++ b/d.html
@@ -60,7 +60,7 @@
             <li class="active" ng-show="filePath == 'includes/dmain.html'"><a ng-click="nav('includes/dmain.html')">Dashboard</a></li>
             <li ng-show="filePath == 'includes/dmain.html'"><a ng-click="nav('includes/dlessons.html')">Lessons</a></li>
             <li ng-show="filePath == 'includes/dmain.html'"><a ng-click="nav('includes/dleaders.html')">Leaders</a></li>
-            <li ng-show="readonly.settings.report && filePath == 'includes/dmain.html'"><a ng-click="histogram();nav('includes/dreport.html')">Report</a></li>
+            <li ng-show="readonly.settings.report && filePath == 'includes/dmain.html'"><a ng-click="genReport();nav('includes/dreport.html')">Report</a></li>
             <li ng-show="filePath == 'includes/dlessons.html'"><a ng-click="nav('includes/dmain.html')">Dashboard</a></li>
             <li class="active" ng-show="filePath == 'includes/dlessons.html'"><a ng-click="nav('includes/dlessons.html')">Lessons</a></li>
             <li ng-show="filePath == 'includes/dlessons.html'"><a ng-click="nav('includes/dleaders.html')">Leaders</a></li>
