--- a/w.html
+++ b/w.html
@@ -310,6 +310,18 @@
           <a ng-click="setUrl()" class="modal-action modal-close btn-flat">Dismiss</a>
         </div>
   </div>
+
+ <!-- modal to show csv -->
+  <div id="modalcsv" class="modal">
+      <div class="modal-content">
+        <h4>CSV</h4>
+        <p ng-bind-html="csv"></p>
+        
+        <div class="modal-footer">
+          <a ng-click="setUrl()" class="modal-action modal-close btn-flat" >Dismiss</a>
+        </div>
+      </div>
+  </div>
 		
   <div id="modalsettings" class="modal center">
       <div class="modal-content">
@@ -365,20 +377,6 @@
                             <label>
                               off
                               <input type="checkbox" ng-click="cdata.readonly.settings.newui = !cdata.readonly.settings.newui" ng-checked="cdata.readonly.settings.newui">
-                              <span class="lever"></span>
-                              on
-                            </label>
-                        </div>
-                    </td>
-                </tr>
-		      
-                <tr>
-                    <td>Show reports tab</td>
-                    <td>
-                        <div class="switch">
-                            <label>
-                              off
-                              <input type="checkbox" ng-click="cdata.readonly.settings.report = !cdata.readonly.settings.report" ng-checked="cdata.readonly.settings.report">
                               <span class="lever"></span>
                               on
                             </label>
