updated new Youtube urls

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     				<p><a href="w.html" target="_blank" class="waves-effect waves-light btn blue">Get started</a></p>
     			</div>
     			<div class="card-panel white hoverable"> 
-                    <a href="https://youtu.be/N28-eKgaH2I" target="_blank"><img src="images/dash.png" width="100%"></a>
+                    <a href="https://youtu.be/bqGtWk--6Bc" target="_blank"><img src="images/dash.png" width="100%"></a>
     				<p>User dashboard engages and empowers by presenting achievements, feedback and materials. <a href="https://youtu.be/N28-eKgaH2I" target="_blank"> Video ...</a></p>
                     
     			</div>
@@ -62,7 +62,7 @@
     			</div>
                 
     			<div class="card-panel white hoverable">
-                    <a href="https://youtu.be/TX71tiInguA" target="_blank"><img src="images/admin.png" width="100%"></a>
+                    <a href="https://youtu.be/j7GeM7-Lc9c" target="_blank"><img src="images/admin.png" width="100%"></a>
                     <div>
                       <p>Admin tools to input, analyse and manage your lessons, badges, levels, quests, points, and comments. <a href="https://youtu.be/TX71tiInguA" target="_blank"> Video ...</a></p>
                     </div>
