remove hyperlink to API url for users to join

--- a/w.html
+++ b/w.html
@@ -288,18 +288,19 @@
           </tr>
           <tr>
             <td>
-                <a href='{{share}}' target='_blank'>{{share}}</a>
+                <!--<a href='{{share}}' target='_blank'>{{share}}</a>-->
+		{{share}}
             </td>
           </tr>
           <tr>
             <td>
               <h5>User Sign-up Process</h5>
                <ol>
-                  <li>Create a class email list and send them this API URL</li>
+                  <li>Create a class email list and send them this URL link</li>
                   <li>Students follow the link to request access</li>
                   <li>View new students using the View Users tool</li>
                   <li>Save new users as part of your class (click checkbox to OK users)</li>
-                  <li>Students refresh gameof5 API URL and they will be in!</li>
+                  <li>Students refresh gameof5 URL link and they will be in!</li>
                </ol>
             </td>
           </tr>
